[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/imp-tool0003.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/Fork/Fork.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/push.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "push"

[sub_resource type="AnimationNodeStateMachineTransition" id=4]

[sub_resource type="AnimationNodeStateMachineTransition" id=5]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=6]
states/idle/node = SubResource( 2 )
states/idle/position = Vector2( 323, 91 )
states/push/node = SubResource( 3 )
states/push/position = Vector2( 126, 91 )
transitions = [ "idle", "push", SubResource( 4 ), "push", "idle", SubResource( 5 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ForkArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "push"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ForkArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 12, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "stun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ForkArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="Fork" type="Node2D"]
script = ExtResource( 2 )

[node name="ForkArea" type="Area2D" parent="."]

position = Vector2( 0, 0 )
collision_layer = 65537

[node name="ForkShape" type="CollisionShape2D" parent="ForkArea"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="ForkSprite" type="Sprite" parent="ForkArea"]
position = Vector2( 6.5, 2.71051e-20 )
scale = Vector2( 0.163043, 0.0942029 )
texture = ExtResource( 1 )

[node name="ForkAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../ForkAnimationPlayer")
parameters/playback = SubResource( 7 )

[node name="ForkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 8 )
anims/push = SubResource( 9 )
anims/stun = SubResource( 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
